syntax = "proto3";
package lscosmos.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "cosmos/base/v1beta1/coin.proto";


option go_package = "github.com/persistenceOne/pstake-native/x/ls-cosmos/types";

//Msg defines the lsCosmos services.
service Msg{
  rpc LiquidStake(MsgLiquidStake) returns (MsgLiquidStakeResponse){
    option (google.api.http).post = "/pstake/lscosmos/v1beta1/LiquidStake";
  }
}


message MsgLiquidStake {
  string mint_address = 1;
  cosmos.base.v1beta1.Coin amount = 2 [(gogoproto.nullable) = false];
  string deposit_address =3;
}

message MsgLiquidStakeResponse{}